# Mirai-Plugin-for-Parabox

./: FAQ.md  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ojhdtapp/miraipluginforparabox/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/SilkCodecJNI/: .gitignore  CMakeLists.txt  JNILame.c  JNILame.h  README.md  global.h  moe_ore_silk_AudioUtils.c  moe_ore_silk_AudioUtils.h  moe_ore_silk_LameCoder.h  moe_ore_silk_SilkCodec.c  moe_ore_silk_SilkCodec.h  silkcodec.c  silkcodec.h
app/src/main/SilkCodecJNI/jni/linux/: jni_md.h
app/src/main/SilkCodecJNI/jni/macos/: jni.h  jni_md.h
app/src/main/SilkCodecJNI/libmp3lame/: machine.h
app/src/main/cpp/: CMakeLists.txt  miraipluginforparabox.cpp  native-lib.cpp
app/src/main/java/com/ojhdtapp/miraipluginforparabox/: MainActivity.kt
app/src/main/java/com/ojhdtapp/miraipluginforparabox/core/: HiltApplication.kt
app/src/main/java/com/ojhdtapp/miraipluginforparabox/di/: AppModule.kt
app/src/main/java/moe/ore/silk/: AudioUtils.java  LameBuilder.java  LameCoder.java  SilkCodec.java
app/src/main/libSilkCodec/: CMakeLists.txt
app/src/main/libSilkCodec/src/: encoder.c
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/xml/: locales_config.xml
app/src/test/java/com/ojhdtapp/miraipluginforparabox/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+66 files in other folders)
